--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -5,7 +5,8 @@
     }
 
     .h2main {
-        text-align: center; 
+        text-align: left;
+        margin-left: 5em;
     }
 
     nav {
@@ -14,7 +15,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-
     }
 
     header {
