--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -14,7 +14,7 @@
         font-family: 'Montserrat', sans-serif;
         display: flex;
         align-items: center;
-        justify-content: center;
+        padding-left: 4.25em;
     }
 
     header {
