--- a/lesson4/css/large.css
+++ b/lesson4/css/large.css
@@ -45,7 +45,7 @@
 
 footer {
     font-size: 0.9em;
-    padding: 1.5rem;
+    padding: 0.001em;
     text-align: center;
     background-color:#87ceeb;
 }
