--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -62,6 +62,14 @@ nav ul.hide {
     margin-right:7.5em;
 }
 
+.contentbox2 {
+    display: block;
+    margin: 10px auto;
+    padding: 15px;
+    background-color: #D3D3D3;
+    font-family: 'Roboto', sans-serif;
+}
+
 body {
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
